freeform-docs/v3/compare.md
---
title: Craft Freeform 3.x - Compare
prev: false
next: false
---

<meta property="og:image" content="https://docs.solspace.com/extras/social/craft/freeform/freeform.png" />

::: version /craft/freeform/v5/
Freeform
:::

<div id="pr-heading">
    <img src="https://docs.solspace.com/extras/icons/products/freeform-icon.png" alt="Freeform" class="pr-image">
    <span class="pr-name">Freeform</span>
    <span class="pr-category">for Craft</span>
    <div class="pr-v-wrapper">
        <div class="pr-v">
            <span class="pr-v-v">3.x</span>
            <span class="pr-v-type pr-retired">Retired</span>
            <span class="pr-v-arrow arrow down"></span>
        </div>
        <ul class="pr-v-list">
            <li><a href="/craft/freeform/v5/">5.x<span class="pr-v-type pr-latest">✓ Latest</span></a></li>
            <li><a href="/craft/freeform/v4/">4.x</a></li>
            <li><a href="/craft/freeform/v3/">3.x<span class="pr-v-type pr-retired">Retired</span></a></li>
            <li><a href="/craft/freeform/v2/">2.x<span class="pr-v-type pr-retired">Retired</span></a></li>
            <li><a href="/craft/freeform/v1/">1.x<span class="pr-v-type pr-retired">Retired</span></a></li>
        </ul>
    </div>
    <div class="pr-buy">
        <a href="https://plugins.craftcms.com/freeform" class="button button-blue"><span class="external-url">Plugin Store</span></a>
    </div>
</div>

<span class="page-section">Overview</span>

# Compare
Freeform offers you the most reliable and battle-tested form building solution available! It's packed with powerful and convenient features, allowing you and/or your clients to build forms effortlessly! There's no doubt Freeform will win hands down in any comparison to other form plugins, but sometimes the site you're working on doesn't need all the features of Freeform, or is on a tighter budget. For this scenario, we've built the [Express Forms](https://docs.solspace.com/craft/express-forms/v1/) plugin.

The chart below will help you easily compare the following plugins to determine which solution is the best for your needs:

- `Craft` - [Craft Contact Form](https://plugins.craftcms.com/contact-form)
- `XF Lite` - Express Forms Lite
- `XF Pro` - Express Forms Pro
- `FF Lite` - <span class="orange">**Freeform Lite**</span>
- `FF Pro` - <span class="orange">**Freeform Pro**</span>

| <h3 class="no-margin">Pricing & Support</h3> | Craft | XF&nbsp;Lite | XF&nbsp;Pro | <h3 class="no-margin orange">FF&nbsp;Lite</h3> | <h3 class="no-margin orange">FF&nbsp;Pro</h3> |
| :--- | :---: | :---: | :---: | :---: | :---: |
| Cost | <small>Free</small> | <small>Free</small> | <small>$49</small> | <b class="orange">$99</b> | <b class="orange">$149</b> |
| Renewal (optional) | <small>N/A</small> | <small>Free</small> | <small>$$29/yr</small> | <span class="orange">$49/yr</span> | <span class="orange">$79/yr</span> |
| Craft Compatibility | <small>3.0+</small> | <small>3.1+</small> | <small>3.1+</small> | <span class="orange">3.4+</span> | <span class="orange">3.4+</span> |
| Support Options | <small>GitHub Issues</small> | <small>Helpdesk,<br />GitHub Issues</small> | <small>Helpdesk,<br />GitHub Issues</small> | <small class="orange">[Helpdesk](./support.md),<br />[GitHub Issues](https://github.com/solspace/craft-freeform/issues)</small></small> | <small class="orange">[Helpdesk](./support.md),<br />[GitHub Issues](https://github.com/solspace/craft-freeform/issues)</small></small> |
| Support Level<br /><i><small>† Typical support ticket first response time within this timeframe or sooner, based on business days.</small></i> | <small>N/A</small> | <small>3-5 days†</small> | <small>2 days†</small> | <small class="orange">1-2 days†</small> | <small class="orange">1-2 days†</small> |
| <h3 class="no-margin table-heading">Forms</h3> | | | | |
| [Form Builder](./overview/form-builder.md) |  | ✓<br /><sub><sup>Simplified</sup></sub> | ✓<br /><sub><sup>Simplified</sup></sub> | <span class="orange">✓<br /><sub><sup>Premium</sup></sub></span> | <span class="orange">✓<br /><sub><sup>Premium</sup></sub></span> |
| Unlimited forms | ✓ | ✓ | ✓ | <span class="orange">✓</span> | <span class="orange">✓</span> |
| [GDPR compliant](./setup/gdpr-compliance.md) | ✓ | ✓ | ✓ | <span class="orange">✓</span> | <span class="orange">✓</span> |
| [Multi-page forms](./overview/multi-page.md) |  |  |  | <span class="orange">✓</span> | <span class="orange">✓</span> |
| [Save & continue form later](./overview/save-continue-later.md) |  |  |  |  | <span class="orange">✓</span> |
| Multi-column layouts (automated) |  |  |  | <span class="orange">✓</span> | <span class="orange">✓</span> |
| Built-in AJAX |  |  |  | <span class="orange">✓</span> | <span class="orange">✓</span> |
| [Conditional Rules logic](./overview/conditional-rules.md) |  |  |  |  | <span class="orange">✓</span> |
| [Attach forms to entries](./overview/fieldtypes.md) |  |  |  | <span class="orange">✓</span> | <span class="orange">✓</span> |
| [Build User registration forms](./guides/user-registration-forms.md) |  |  |  |  | <span class="orange">✓</span> |
| Custom statuses |  |  |  | <span class="orange">✓</span> | <span class="orange">✓</span> |
| <h3 class="no-margin table-heading">Fields</h3> | | | | |
| Unlimited fields | ✓ | ✓ | ✓ | <span class="orange">✓</span> | <span class="orange">✓</span> |
| [Field types](./overview/fields.md) | ✓<br /><sub><sup>Basic</sup></sub> | ✓<br /><sub><sup>Basic</sup></sub> | ✓<br /><sub><sup>Basic</sup></sub> | <span class="orange">✓<br /><sub><sup>Basic+</sup></sub></span> | <span class="orange">✓<br /><sub><sup>Premium</sup></sub></span> |
| ⎼ Text | ✓ | ✓ | ✓ | <span class="orange">✓</span> | <span class="orange">✓</span> |
| ⎼ Textarea | ✓ | ✓ | ✓ | <span class="orange">✓</span> | <span class="orange">✓</span> |
| ⎼ Email | ✓ | ✓ | ✓ | <span class="orange">✓</span> | <span class="orange">✓</span> |
| ⎼ Number | ✓ | ✓ | ✓ | <span class="orange">✓</span> | <span class="orange">✓</span> |
| ⎼ Checkbox | ✓ | ✓ | ✓ | <span class="orange">✓</span> | <span class="orange">✓</span> |
| ⎼ Checkboxes | ✓ | ✓<br /><sub><sup>_Options_&nbsp;type</sup></sub> | ✓<br /><sub><sup>_Options_&nbsp;type</sup></sub> | <span class="orange">✓</span> | <span class="orange">✓</span> |
| ⎼ Radios | ✓ | ✓<br /><sub><sup>_Options or<br />Text_&nbsp;type</sup></sub> | ✓<br /><sub><sup>_Options or<br />Text_&nbsp;type</sup></sub> | <span class="orange">✓</span> | <span class="orange">✓</span> |
| ⎼ File upload | ✓ | ✓ | ✓ | <span class="orange">✓</span> | <span class="orange">✓</span> |
| ⎼ File upload Drag & Drop |  |  |  |  | <span class="orange">✓</span> |
| ⎼ Hidden | ✓ | ✓ | ✓ | <span class="orange">✓</span> | <span class="orange">✓</span> |
| ⎼ Select | ✓ | ✓<br /><sub><sup>_Options or<br />Text_&nbsp;type</sup></sub> | ✓<br /><sub><sup>_Options or<br />Text_&nbsp;type</sup></sub> | <span class="orange">✓</span> | <span class="orange">✓</span> |
| ⎼ Multi-select | ✓ | ✓<br /><sub><sup>_Options_&nbsp;type</sup></sub> | ✓<br /><sub><sup>_Options_&nbsp;type</sup></sub> | <span class="orange">✓</span> | <span class="orange">✓</span> |
| ⎼ Dynamic recipients | ✓ | ✓ | ✓ | <span class="orange">✓</span> | <span class="orange">✓</span> |
| ⎼ Date & time |  |  |  |  | <span class="orange">✓</span> |
| ⎼ Phone |  |  |  |  | <span class="orange">✓</span> |
| ⎼ Table |  |  |  |  | <span class="orange">✓</span> |
| ⎼ Rating |  |  |  |  | <span class="orange">✓</span> |
| ⎼ Opinion Scale |  |  |  |  | <span class="orange">✓</span> |
| ⎼ Signature |  |  |  |  | <span class="orange">✓</span> |
| ⎼ Invisible |  |  |  |  | <span class="orange">✓</span> |
| ⎼ Regex |  |  |  |  | <span class="orange">✓</span> |
| ⎼ Website |  |  |  |  | <span class="orange">✓</span> |
| ⎼ HTML block |  |  |  | <span class="orange">✓</span> | <span class="orange">✓</span> |
| ⎼ Rich Text block |  |  |  |  | <span class="orange">✓</span> |
| ⎼ Confirm |  |  |  |  | <span class="orange">✓</span> |
| ⎼ Password |  |  |  |  | <span class="orange">✓</span> |
| [Populate fields with Element data](./overview/fields.md#populating-fields-with-elements-predefined-options) | ✓<br /><sub><sup>Manually</sup></sub> | ✓<br /><sub><sup>Manually</sup></sub> | ✓<br /><sub><sup>Manually</sup></sub> | <span class="orange">✓</span> | <span class="orange">✓</span> |
| [Populate fields with Predefined options](./overview/fields.md#populating-fields-with-elements-predefined-options) |  |  |  | <span class="orange">✓</span> | <span class="orange">✓</span> |
| Populate fields from URI query string |  |  |  | <span class="orange">✓</span> | <span class="orange">✓</span> |
| Set field attributes inside form builder |  |  |  | <span class="orange">✓</span> | <span class="orange">✓</span> |
| Set required fields & validation |  | ✓ | ✓ | <span class="orange">✓</span> | <span class="orange">✓</span> |
| Inline error handling for all fields |  | ✓ | ✓ | <span class="orange">✓</span> | <span class="orange">✓</span> |
| <h3 class="no-margin table-heading">Email Notifications</h3> | | | | |
| [Unlimited email notifications and template choices](./overview/email-notifications.md) |  | ✓ | ✓ | <span class="orange">✓</span> | <span class="orange">✓</span> |
| ⎼ to Admin | ✓ | ✓ | ✓ | <span class="orange">✓</span> | <span class="orange">✓</span> |
| ⎼ to Submitter |  | ✓ | ✓ | <span class="orange">✓</span> | <span class="orange">✓</span> |
| ⎼ to User-defined email |  |  |  | <span class="orange">✓</span> | <span class="orange">✓</span> |
| ⎼ Dynamic Admin recipient(s) | ✓ | ✓ | ✓ | <span class="orange">✓</span> | <span class="orange">✓</span> |
| ⎼ Dynamic at Template level |  | ✓ | ✓ | <span class="orange">✓</span> | <span class="orange">✓</span> |
| Email notifications saved as HTML files |  | ✓ | ✓ | <span class="orange">✓</span> | <span class="orange">✓</span> |
| HTML Email body |  | ✓ | ✓ | <span class="orange">✓</span> | <span class="orange">✓</span> |
| Text Email body |  |  |  | <span class="orange">✓</span> | <span class="orange">✓</span> |
| Include Reply-to, CC and BCC |  | ✓ | ✓ | <span class="orange">✓</span> | <span class="orange">✓</span> |
| Attach predefined Assets/files to be included |  |  |  |  | <span class="orange">✓</span> |
| Retroactively resend email notifications |  |  |  |  | <span class="orange">✓</span> |
| [Email Alert](./setup/settings.md#send-email-alerts-for-failed-notifications) (notify of failed email notifications) |  |  |  | <span class="orange">✓</span> | <span class="orange">✓</span> |
| <h3 class="no-margin table-heading">Submissions</h3> | | | | |
| Save submissions to database |  | ✓ | ✓ | <span class="orange">✓</span> | <span class="orange">✓</span> |
| [View, edit and delete submissions](./overview/submissions.md) |  | ✓ | ✓ | <span class="orange">✓</span> | <span class="orange">✓</span> |
| Display submissions on front end |  |  |  | <span class="orange">✓</span> | <span class="orange">✓</span> |
| [Edit submissions on front end](./overview/submission-editing.md) |  |  |  |  | <span class="orange">✓</span> |
| [Limit form to 1 submission per user](./overview/submission-limits.md#per-user) |  |  |  |  | <span class="orange">✓</span> |
| [Limit number of submissions per form](./overview/submission-limits.md#per-form) |  |  |  |  | <span class="orange">✓</span> |
| [Map submission data to Craft Elements](./overview/form-builder.md#element-connections) |  |  |  |  | <span class="orange">✓</span> |
| [Relate submissions to Craft Elements](./overview/relations.md) |  |  |  |  | <span class="orange">✓</span> |
| Automatically purge submission data |  |  |  |  | <span class="orange">✓</span> |
| <h3 class="no-margin table-heading">Exporting</h3> | | | | |
| [Export submission data](./overview/exporting.md) |  | ✓<br /><sub><sup>CSV</sup></sub> | ✓<br /><sub><sup>Excel, CSV,<br />XML, JSON</sup></sub> | <span class="orange">✓<br /><sub><sup>CSV</sup></sub></span> | <span class="orange">✓<br /><sub><sup>Excel, CSV,<br />XML, JSON, Text</sup></sub></span> |
| [Export profiles](./overview/exporting.md#export-profiles) (pre-configured) |  |  |  |  | <span class="orange">✓</span> |
| [Export email notifications](./overview/exporting.md#export-email-notifications) |  |  |  |  | <span class="orange">✓</span> |
| <h3 class="no-margin table-heading">Spam Protection</h3> | | | | |
| [Built-in Honeypot](./overview/spam-protection.md) |  | ✓ | ✓ | <span class="orange">✓</span> | <span class="orange">✓</span> |
| [Javascript Enhancement for Honeypot](./overview/spam-protection.md) |  |  |  | <span class="orange">✓</span> | <span class="orange">✓</span> |
| [Spam folder](./overview/spam-protection.md#spam-folder) |  |  |  | <span class="orange">✓</span> | <span class="orange">✓</span> |
| [Spam keyword/email blocking](./overview/spam-protection.md#spam-blocking) |  |  |  | <span class="orange">✓</span> | <span class="orange">✓</span> |
| [reCAPTCHA v2 Checkbox](./overview/spam-protection.md#recaptcha) |  | ✓ | ✓ | <span class="orange">✓</span> | <span class="orange">✓</span> |
| reCAPTCHA v2 Invisible |  |  |  |  | <span class="orange">✓</span> |
| reCAPTCHA v3 |  |  |  |  | <span class="orange">✓</span> |
| hCaptcha Checkbox |  |  |  |  | <span class="orange">✓</span> |
| hCaptcha Invisible |  |  |  |  | <span class="orange">✓</span> |
| <h3 class="no-margin table-heading">Templating</h3> | | | | |
| Automated templating |  | ✓ | ✓ | <span class="orange">✓</span> | <span class="orange">✓</span> |
| [Demo templates](./setup/demo.md) |  | ✓ | ✓ | <span class="orange">✓</span> | <span class="orange">✓</span> |
| [Popular framework examples](./templating/formatting-template-examples.md) |  | ✓ | ✓ | <span class="orange">✓</span> | <span class="orange">✓</span> |
| Formatting templates as HTML files |  | ✓ | ✓ | <span class="orange">✓</span> | <span class="orange">✓</span> |
| <h3 class="no-margin table-heading">Integrations</h3> | | | | |
| [CRM API integrations](./integrations/crm/README.md) |  |  | ✓ |  | <span class="orange">✓</span> |
| ⎼ Salesforce Lead |  |  | ✓ |  | <span class="orange">✓</span> |
| ⎼ Salesforce Opportunity |  |  | ✓ |  | <span class="orange">✓</span> |
| ⎼ Pardot |  |  |  |  | <span class="orange">✓</span> |
| ⎼ HubSpot |  |  | ✓ |  | <span class="orange">✓</span> |
| ⎼ ActiveCampaign |  |  |  |  | <span class="orange">✓</span> |
| ⎼ Pipedrive Deals |  |  |  |  | <span class="orange">✓</span> |
| ⎼ Pipedrive Leads |  |  |  |  | <span class="orange">✓</span> |
| ⎼ Zoho Lead |  |  |  |  | <span class="orange">✓</span> |
| ⎼ Zoho Deal |  |  |  |  | <span class="orange">✓</span> |
| ⎼ Infusionsoft |  |  |  |  | <span class="orange">✓</span> |
| ⎼ Insightly |  |  |  |  | <span class="orange">✓</span> |
| ⎼ SharpSpring |  |  |  |  | <span class="orange">✓</span> |
| ⎼ Freshdesk (helpdesk) |  |  |  |  | <span class="orange">✓</span> |
| [Email Marketing integrations](./integrations/email-marketing/README.md) |  |  | ✓ |  | <span class="orange">✓</span> |
| ⎼ Mailchimp |  |  | ✓ |  | <span class="orange">✓</span> |
| ⎼ Campaign Monitor |  |  | ✓ |  | <span class="orange">✓</span> |
| ⎼ Constant Contact |  |  | ✓ |  | <span class="orange">✓</span> |
| ⎼ ActiveCampaign |  |  |  |  | <span class="orange">✓</span> |
| ⎼ dotmailer |  |  |  |  | <span class="orange">✓</span> |
| ⎼ Craft Campaign plugin |  |  |  |  | <span class="orange">✓</span> |
| [Webhooks](./integrations/webhooks/README.md) |  |  |  |  | <span class="orange">✓</span> |
| ⎼ [Slack](./integrations/webhooks/slack.md) |  |  |  |  | <span class="orange">✓</span> |
| ⎼ [Zapier](./integrations/webhooks/zapier.md) |  |  |  |  | <span class="orange">✓</span> |
| ⎼ [Generic](./integrations/webhooks/generic.md) |  |  |  |  | <span class="orange">✓</span> |
| [POST Forwarding](./integrations/post-forwarding/README.md) |  |  |  |  | <span class="orange">✓</span> |
| [GraphQL](./developer/graphql.md) |  |  |  | ✓ | <span class="orange">✓</span> |
| [Accept Payments](./integrations/payments/README.md) (Stripe) |  |  |  |  | <span class="orange">✓</span> |
| <h3 class="no-margin table-heading">Usability</h3> | | | | |
| [CP Permission controls](./setup/permissions.md) |  | ✓<br /><sub><sup>Basic</sup></sub> | ✓<br /><sub><sup>Basic</sup></sub> | <span class="orange">✓<br /><sub><sup>Premium</sup></sub></span> | <span class="orange">✓<br /><sub><sup>Premium</sup></sub></span> |
| [Dashboard widgets](./overview/widgets.md) |  |  | ✓<br /><sub><sup>1 widget</sup></sub> |  | <span class="orange">✓<br /><sub><sup>5 widgets</sup></sub></span> |
| [Translatable](./setup/translating.md) | ✓ | ✓ | ✓ | <span class="orange">✓</span> | <span class="orange">✓</span> |
| Rename plugin |  |  | ✓ |  | <span class="orange">✓</span> |
| <h3 class="no-margin table-heading">Developer</h3> | | | | |
| Developer-friendly | ✓ | ✓<br /><sub><sup>Extensive</sup></sub> | ✓<br /><sub><sup>Extensive</sup></sub> | <span class="orange">✓</span> | <span class="orange">✓</span> |
| [Developer events](./developer/events.md) | ✓ | ✓<br /><sub><sup>Extensive</sup></sub> | ✓<br /><sub><sup>Extensive</sup></sub> | <span class="orange">✓</span> | <span class="orange">✓</span> |

_*NOTE: Several features not available natively to these form solutions are likely possible with custom development._
